Updated navigation links across all pages

--- a/views/about.html
+++ b/views/about.html
@@ -8,10 +8,11 @@
 </head>
 <body>
     <h1>About Our Project</h1>
-    <nav>
-        <a href="/">Home</a> |
-        <a href="/about">About</a> |
-        <a href="/contact">Contact</a>
+     <nav>
+       <a href="/">Home</a> | 
+    <a href="/about">About</a> | 
+    <a href="/contact">Contact</a> | 
+    <a href="/blog">Blog</a> </nav>
     </nav>
     <p>This is a simple Node.js and Express application.</p>
 </body>
