--- a/views/index.html
+++ b/views/index.html
@@ -9,9 +9,10 @@
 <body>
     <h1>Welcome to the Home Page</h1>
     <nav>
-        <a href="/">Home</a> |
-        <a href="/about">About</a> |
-        <a href="/contact">Contact</a>
+       <a href="/">Home</a> | 
+    <a href="/about">About</a> | 
+    <a href="/contact">Contact</a> | 
+    <a href="/blog">Blog</a> </nav>
     </nav>
 </body>
 </html>
